--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,21 +15,21 @@ gotop: false
         </div>
         <div class="collection-info">
           {% if page.modify %}
-            <span class="meta-info">
+          <span class="meta-info">
               <span class="octicon octicon-pencil"></span>
               {{ page.modify }}
             </span>
           {% endif %}
           {% if page.date %}
-            <span class="meta-info">
+          <span class="meta-info">
               <span class="octicon octicon-calendar"></span>
               {{ page.date | date: "%Y/%m/%d" }}
             </span>
           {% endif %}
-          {% for tech in page.technology %}
-            <span class="meta-info">
+          {% for cat in page.categories %}
+          <span class="meta-info">
               <span class="octicon octicon-file-directory"></span>
-              <a href="{{ site.url }}/technology/#{{ tech }}" title="{{ tech }}">{{ tech }}</a>
+              <a href="{{ site.url }}/categories/#{{ cat }}" title="{{ cat }}">{{ cat }}</a>
             </span>
           {% endfor %}
         </div>
@@ -39,28 +39,28 @@ gotop: false
 </section>
 <!-- / .banner -->
 <section class="container content">
-<div class="columns">
-  <div class="column three-fourths" >
-    <article class="article-content markdown-body">
-      {{ content }}
-    </article>
-    <div class="poetry">
-      {% include poetry.html %}
+  <div class="columns">
+    <div class="column three-fourths" >
+      <article class="article-content markdown-body">
+        {{ content }}
+      </article>
+      <div class="poetry">
+        {% include poetry.html %}
+      </div>
+      <div class="share">
+        {% include sns-share.html %}
+      </div>
+      {% comment %}
+      <div class="comment">
+        {% include comments.html %}
+      </div>
+      {% endcomment %}
     </div>
-    <div class="share">
-      {% include sns-share.html %}
+    <div class="column one-fourth">
+      {% include sidebar-access-count.html %}
+      {% include sidebar-post-nav.html %}
     </div>
-    {% comment %}
-    <div class="comment">
-      {% include comments.html %}
-    </div>
-    {% endcomment %}
   </div>
-  <div class="column one-fourth">
-    {% include sidebar-access-count.html %}
-    {% include sidebar-post-nav.html %}
-  </div>
-</div>
 </section>
 <!-- /section.content -->
 <script src="/assets/js/fixed_title.js"></script>
