--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,6 +31,7 @@ layout: default
       <h3>Search</h3>
       {% include sidebar-search.html %}
       {% include sidebar-calendar.html %}
+      {% include sidebar-categories-nav.html %}
       {% include sidebar-popular-repo.html %}
       {% include sidebar-access-count.html %}
     </div>
